# wotmods-discord-rich-presence

./: .gitattributes  .gitmodules  CMakeLists.txt  NOTICE  README.md  compile.py  engine.cpp  meta.xml  project.ini
.github/workflows/: build.yml
distribution/: CMakeLists.txt  readme.ja.txt  readme.txt
distribution/readme/: readme.ja.txt.in  readme.txt.in
engine/: CMakeLists.txt  engine.cpp
mods/configs/arukuka.discord_rich_presence/: en.json  ja.json
package/: CMakeLists.txt  meta.xml.in
package/res/mods/xfw_packages/discord_rich_presence/: xfw_package.json.in
ps1_scripts/: build.ps1  configure.ps1  package.ps1  prepare.ps1  utils.ps1
res/mods/xfw_packages/discord_rich_presence/: xfw_package.json
res/scripts/client/gui/mods/: mod_discord_rich_presence.py
